--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-dateparser==0.7.0
+# dateparser==0.7.0
 Flask==1.0.2
 gunicorn==19.9.0
-requests==2.19.1
-virtualenv==16.0.0
-bottle==0.12.18
+# requests==2.19.1
+# virtualenv==16.0.0
+bottle==0.12.9
